--- a/app/index.html
+++ b/app/index.html
@@ -2,22 +2,25 @@
 <head>
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/wordcloud2.js/src/wordcloud2.js"></script>
+	<script src="bower_components/spin.js/spin.js"></script>
+	<script src="bower_components/angular-spinner/angular-spinner.js"></script>
 	<script src="app.js"></script>
 	<script src="controller.js"></script>
-	<script src="services/favoriteArtists.js"></script>
+	<script src="services.js"></script>
 	<script src="wordcloudDirective.js"></script>
 </head>
 <body ng-controller="ApplicationCtrl">
+	<span us-spinner spinner-key="spinner-1"></span>
 	<div>
-		<h3> Personal music cloud</h3>
+		<h3>Your personal last.fm music cloud</h3>
 		<form>
 			<input type="text" ng-model="username" placeholder="last.fm username"></input>
 			<button ng-click="generateCloud(username)">Generate wordcloud</button>
 		</form>
 
 	</div>
+	<p ng-if="error">{{error.message}}</p>
 	<wordcloud ng-if="test" list="test"></wordcloud>
-	<p>{{test}}</p>
 
 </body>
 
