--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,7 @@
 <html ng-app="app">
 <head>
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css"></style>
+
 	<script src="bower_components/angular/angular.js"></script>
 	<script src="bower_components/wordcloud2.js/src/wordcloud2.js"></script>
 	<script src="bower_components/spin.js/spin.js"></script>
@@ -11,11 +13,13 @@
 </head>
 <body ng-controller="ApplicationCtrl">
 	<span us-spinner spinner-key="spinner-1"></span>
-	<div>
-		<h3>Your personal last.fm music cloud</h3>
-		<form>
-			<input type="text" ng-model="username" placeholder="last.fm username"></input>
-			<button ng-click="generateCloud(username)">Generate wordcloud</button>
+	<div style="padding-left : 10px">
+		<h3>last.fm music cloud</h3>
+		<p>Music cloud analyses your musical history on last.fm and generates a beautiful graphic which illustrates your musical taste </p>
+		<br>
+		<form class="form-inline">
+			<input class="form-control" type="text" ng-model="username" placeholder="last.fm username"></input>
+			<button class="btn btn-default" ng-click="generateCloud(username)">Generate</button>
 		</form>
 
 	</div>
